@@ -1040,7 +1040,7 @@ class Writer(writers.HTMLishWriter):
                 elem.set(attr, fill)
 
         # remove html5-only attribute
-        attrs_to_remove = [('*', 'role'),('*', 'aria-label'),('*', 'aria-labelledby'),]
+        attrs_to_remove = [('*', 'role'),]
         for (tag, attr) in attrs_to_remove:
             for elem in xpath(xhtml, f"//xhtml:{tag}[@{attr}]"):
                 del elem.attrib[attr]
@@ -1133,6 +1133,16 @@ class Writer(writers.HTMLishWriter):
             for key in e.attrib.keys():
                 if key.startswith('data-'):
                     del e.attrib[key]
+
+    @staticmethod
+    def strip_aria_attribs(xhtml):
+        """ Epubcheck doesn't like data- attributes in EPUB2.
+        """
+        for e in xpath(xhtml, "//@*[starts-with(name(), 'aria')]/.."):
+            for key in e.attrib.keys():
+                if key.startswith('aria-'):
+                    del e.attrib[key]
+
 
 
     @staticmethod
@@ -1403,6 +1413,7 @@ class Writer(writers.HTMLishWriter):
                         p.strip_links(xhtml, job.spider.dict_urls_mediatypes())
                         self.strip_links(xhtml, job.spider.dict_urls_mediatypes())
                         self.strip_data_attribs(xhtml)
+                        self.strip_aria_attribs(xhtml)
 
                         self.strip_noepub(xhtml)
                         # self.strip_rst_dropcaps(xhtml)
